<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4512996" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_curtain"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_activitywelcome_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toTopOf="@+id/imglogo"
                app:layout_constraintEnd_toEndOf="@+id/imglogo"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imglogo"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_activitywelcome_title"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.74" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title_signinwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signin_with"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_facebook_signinwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_facebook_signinwith"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook_signinwith"
        app:layout_constraintStart_toStartOf="@id/btn_facebook_signinwith"
        app:layout_constraintTop_toTopOf="@id/btn_facebook_signinwith" />

    <Button
        android:id="@+id/btn_facebook_signinwith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/facebook_background"
        android:text="@string/facebook"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btngoogleplus_signinwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_signinwith" />

    <Button
        android:id="@+id/btngoogleplus_signinwith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/google_background"
        android:text="@string/google_plus"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@id/btn_email_signin_with"
        app:layout_constraintEnd_toEndOf="@+id/btn_facebook_signinwith"
        app:layout_constraintStart_toStartOf="@+id/btn_facebook_signinwith"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook_signinwith" />

    <Button
        android:id="@+id/btn_email_signin_with"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/cardback"
        android:inputType="textCapWords"
        android:text="@string/email_sign_in"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btngoogleplus_signinwith"
        app:layout_constraintStart_toStartOf="@+id/btngoogleplus_signinwith"
        app:layout_constraintTop_toBottomOf="@+id/btngoogleplus_signinwith" />

    <TextView
        android:id="@+id/tv_bottom_signinwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_signinwith"
        app:layout_constraintStart_toStartOf="@+id/tv_title_signinwith"
        app:layout_constraintTop_toBottomOf="@+id/btn_email_signin_with" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>